force-app/main/default/objects/Partner_Incentive_Policy__mdt/Partner_Incentive_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Partner Incentive Policy</label>
    <pluralLabel>Partner Incentive Policies</pluralLabel>
</CustomObject>