force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <label>Approval Required</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>