force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <description
  >Percentage of Revenue / Percentage of Attributed Revenue / Fixed Amount / Tiered / Threshold / Formula / External. Only Percentage of Attributed Revenue, Fixed Amount and Tiered are implemented by IncentiveCommandService.calculate() - the rest are recognised-but-unsupported and raise a clear error rather than silently no-opping.</description>
    <label>Calculation Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>