force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Claim_Required__c.field-meta.xml
<CustomField>
    <fullName>Claim_Required__c</fullName>
    <label>Claim Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>