force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>