force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <label>Incentive Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>