force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Maximum_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Incentive__c</fullName>
    <label>Maximum Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>