force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Minimum_Attribution_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Attribution_Percentage__c</fullName>
    <label>Minimum Attribution Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>