force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Minimum_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Revenue__c</fullName>
    <label>Minimum Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>