force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <label>Partner Tier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>