force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Require_Customer_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Require_Customer_Acceptance__c</fullName>
    <label>Require Customer Acceptance</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>