force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Require_Protection__c.field-meta.xml
<CustomField>
    <fullName>Require_Protection__c</fullName>
    <label>Require Protection</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>