force-app/main/default/objects/Partner_Incentive_Policy__mdt/fields/Required_Attribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Required_Attribution_Type__c</fullName>
    <label>Required Attribution Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>